fix paragraph text align on about me page

--- a/src/containers/Website/About/About.module.css
+++ b/src/containers/Website/About/About.module.css
@@ -41,6 +41,13 @@
     line-height: 1.2;
     color: #37474f;
     font-weight: 600;
-    text-align: justify;
+    text-align: center;
     font-size: 1.1rem;
+}
+
+@media
+(min-width: 600px) {
+    .about p {
+        text-align: justify;
+    }
 }
